--- a/src/app/cms/pages/grid/grid.component.html
+++ b/src/app/cms/pages/grid/grid.component.html
@@ -1,1 +1,8 @@
 <p>grid works!</p>
+
+<!-- <form [formGroup]="form">
+  <p>
+    name: {{ nameField.value }} {{ nameField.valid }}
+    <input formControlName="name" type="text" />
+  </p>
+</form> -->
